Create Rank Tree Template with comparative key template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,6 @@ project(Tree)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Tree main.cpp Tree.h AvlTree.h)
-add_executable(TreeTester TreeTester.cpp Tree.h)
+add_executable(Tree main.cpp Tree.h AvlTree.h RankTree.h)
+add_executable(TreeTester TreeTester.cpp Tree.h RankTree.h ThreeParamKey.cpp ThreeParamKey.h)
+add_executable(RankTester RankTester.cpp RankTree.h ThreeParamKey.cpp ThreeParamKey.h)
